Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26555

clangd doesn't mark slots or signals

XMLWordPrintable

    • Windows
    • 084dced9bee5ac7a9415d9c71c68a3e9684c6183 (qt-creator/qt-creator/6.0)

      On the popup before signals and slots were marked, with clangd it is "just a function". Especially the signals are not shown first, if we complete for a connect call.

        For Gerrit Dashboard: QTCREATORBUG-26555
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            hazardy Björn
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes